examples/kubernetes/unifi/controller/04-IngressRoute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  namespace: unifi
  name: unifi-controller

spec:
  entryPoints:
    - https
  routes:
  - kind: Rule
    match: Host(`unifi.example.com`)
    services:
    - kind: Service
      name: controller
      port: 8443
      scheme: https
  tls:
    certResolver: letsencrypt
